examples/src/simple.adb.stderr
simple.adb:7:06: error: file "arg_parser.ads" not found
